apps/codecombat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: codecombat
  labels:
    app.kubernetes.io/name: codecombat
    app.kubernetes.io/part-of: codecombat
