apps/codecombat/02-mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: codecombat
  labels:
    app: mongodb
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: database
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      name: mongodb
  selector:
    app: mongodb
    app.kubernetes.io/name: mongodb
