apps/codecombat/04-codecombat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codecombat
  namespace: codecombat
  labels:
    app: codecombat
    app.kubernetes.io/name: codecombat
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: codecombat
    app.kubernetes.io/name: codecombat
